[package]
name = "gen-polygons"
version = "0.1.0"
authors = ["Markus Hällfors <markus@hallfors.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26.1"
#shaderc = "0.7"
cgmath = "0.17"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12.0"
futures = "0.3"
oxigen = "2.2.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.5"
smaa = "0.6.0"
genevo = "0.7"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

[[bin]]
name = "polygen"
path = "src/polygen/main.rs"

[[bin]]
name = "genalgo"
path = "src/genalgo/main.rs"

[[bin]]
name = "genevoalgo"
path = "src/genevoalgo/main.rs"

[[bin]]
name = "polygenvo"
path = "src/polygenvo/main.rs"